ocsstore (2.2.1-0ubuntu1) xenial; urgency=low

  * Fix for app launcher
  * Fix missing dependencies

 -- Akira Ohgaki <akiraohgaki@gmail.com>  Wed, 30 Aug 2017 03:47:53 +0000

ocsstore (2.2.0-0ubuntu1) xenial; urgency=low

  * Toolbar items and sidebar changed
  * Added theme apply functions for Cinnamon desktop, it's available for wallpaper, icon, cursor, gtk3 theme, metacity theme, and cinnamon theme
  * Added theme apply functions for Mate desktop, it's available for wallpaper, icon, cursor, gtk2 theme, and metacity theme

 -- Akira Ohgaki <akiraohgaki@gmail.com>  Tue, 15 Aug 2017 06:40:23 +0000

ocsstore (2.1.1-0ubuntu1) xenial; urgency=low

  * Fix for file installation

 -- Akira Ohgaki <akiraohgaki@gmail.com>  Wed, 19 Jul 2017 00:05:23 +0000

ocsstore (2.1.0-0ubuntu1) xenial; urgency=low

  * Rebrand

 -- Akira Ohgaki <akiraohgaki@gmail.com>  Sun, 09 Jul 2017 05:47:38 +0000