@@ -1,4 +1,5 @@
 usr/bin/ocsstore
+usr/bin/ocsstore-appimage
 usr/lib/ocsstore-*/*
 usr/share/applications/ocsstore.desktop
 usr/share/icons/hicolor/scalable/apps/ocsstore.svg
