@@ -1,9 +1,10 @@
 ocsstore (2.2.1-0ubuntu1) xenial; urgency=low
 
+  * Support AppImage
   * Fix for app launcher
   * Fix missing dependencies
 
- -- Akira Ohgaki <akiraohgaki@gmail.com>  Wed, 30 Aug 2017 03:47:53 +0000
+ -- Akira Ohgaki <akiraohgaki@gmail.com>  Mon, 25 Sep 2017 14:42:49 +0000
 
 ocsstore (2.2.0-0ubuntu1) xenial; urgency=low
 
